[package]
name = "async-abci"
version = "0.1.8"
edition = "2021"
description = "A async abci server."
readme = "../README.md"
license = "MIT"
repository = "https://github.com/tiannian/async-abci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
log = "0.4.14"
prost = "0.11"
async-trait = "0.1.50"
tm-abci = { path = "../tm-abci", version = "0.1" }
tm-protos = { path = "../tm-protos", version = "0.1" }

tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "rt-multi-thread"], optional = true }
smol = { version = "1.2.5", optional = true }

[dev-dependencies]
env_logger = "0.8.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"]}

[features]
default = ["smol-backend"]

tokio-backend = ["tokio"]
smol-backend = ["smol"]

[[example]]
name = "tokio_appx"
required-features = ["tokio-backend"]
