[package]
name = "tm-abci"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.50", optional = true }
tm-protos = { path = "../tm-protos" }

[features]
default = ["async"]
sync = []
async = ["async-trait"]
