[package]
name = "tm-abci"
version = "0.1.1"
edition = "2021"
description = "tendermint ABCI trait in no_std"
license = "MIT"
repository = "https://github.com/tiannian/async-abci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.50" }
tm-protos = { path = "../tm-protos", version = "0.1.0" }

