[package]
name = "tm-protos"
version = "0.1.0"
edition = "2021"
description = "tendermint ABCI protobuf types in no_std"
license = "MIT"
repository = "https://github.com/tiannian/async-abci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", default-features = false }
prost = { version = "0.8", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.8", default-features = false }
