[package]
name = "tm-protos"
version = "0.1.2"
edition = "2021"
description = "tendermint ABCI protobuf types in no_std"
license = "MIT"
repository = "https://github.com/tiannian/async-abci"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", default-features = false }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.11", default-features = false }

[build-dependencies]
prost-build = "0.11"
