[package]
name = "tm-protos"
version = "0.1.3"
edition = "2021"
description = "tendermint ABCI protobuf types in no_std"
license = "MIT"
repository = "https://github.com/tiannian/async-abci"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", default-features = false }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.11", default-features = false }

